--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build and publish a Docker image for ${{ github.repository }}
+      uses: macbre/push-to-ghcr@master
       with:
           image_name: ${{ github.repository }}
           github_token: ${{ secrets.GH_TOKEN }}
